// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pathless route thunk called: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`pathless route thunk called: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pathless route thunk called: 1 - routes - PATHLESS - onComplete 1`] = `1`;

exports[`pathless route thunk called: 1 - routes - PATHLESS - thunk 1`] = `1`;

exports[`pathless route thunk called: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`pathless route thunk called: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "scene": "",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`pathless route thunk called: 1 - title 1`] = `"REDIRECTED"`;

exports[`pathless route thunk errors trigger onError: 1 - response 1`] = `
Object {
  "error": [Error: fail],
  "type": "PATHLESS_ERROR",
}
`;

exports[`pathless route thunk errors trigger onError: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - onComplete 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - onError 1`] = `1`;

exports[`pathless route thunk errors trigger onError: 1 - routes - PATHLESS - thunk 1`] = `1`;

exports[`pathless route thunk errors trigger onError: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pathless route thunk errors trigger onError: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": [Error: fail],
    "errorType": "PATHLESS_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "PATHLESS_ERROR",
}
`;

exports[`pathless route thunk errors trigger onError: 1 - title 1`] = `"FIRST"`;
